# applyme-lever-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  REPORT.md
examples/: README.md  profile.example.json  vacancies.example.txt
screenshots/: README.md
scripts/: check_chrome.py  check_motion.py  fingerprint_check.py  prepare_inputs.py  record_motion.py
src/applyme/: __main__.py  app.py  app_pw.py  cli.py  config.py  errors.py  evidence.py  models.py  profile_loader.py  runner.py
src/applyme/answers/: llm.py  rules.py
src/applyme/browser/: actions.py  engine.py  human.py  motion.py  preflight.py  pw_engine.py  warmup.py
src/applyme/captcha/: _const.py  base.py  capsolver.py  captchasonic.py  twocaptcha.py
src/applyme/lever/: fill.py  form.py  locations.py  pw_fill.py  submit.py  verify.py
tests/: conftest.py
tests/fixtures/: apply_aledade.html  error_400.html  thanks.html
tests/integration/: test_apply_flow.py  test_engine.py  test_leverdemo_smoke.py  test_motion_smoke.py  test_pw_engine.py  test_warmup.py
tests/unit/: test_captcha.py  test_check_motion.py  test_cli.py  test_config.py  test_errors.py  test_evidence.py  test_fill.py  test_form.py  test_human.py  test_llm.py  test_locations.py  test_models.py  test_motion.py  test_preflight.py  test_profile_loader.py  test_pw_fill.py  test_record_motion.py  test_resolve_answers.py  test_rules.py  test_runner.py  test_submit.py  test_verify.py
