[project]
name = "applyme"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "zendriver>=0.15.3",
    "patchright>=1.60.1",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13",
    "pydantic-settings>=2.14.1",
    "selectolax>=0.4.10",
    "tenacity>=9.1.4",
    "structlog>=26.1",
    "2captcha-python>=2.0.7",
    "imap-tools>=1.13",
    "anthropic>=0.109",
]

[project.scripts]
applyme = "applyme.cli:main"

[dependency-groups]
# installed by default on `uv sync` (unlike optional-dependencies, which need --extra dev)
dev = ["pytest>=9.0", "pytest-asyncio>=1.4", "pytest-cov>=7.0", "ruff>=0.15", "basedpyright>=1.39.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a real Chrome browser (excluded from default run)",
    "smoke: end-to-end smoke tests against the live leverdemo sandbox (excluded from default run)",
]

[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
extend-select = ["ASYNC", "I", "UP", "B"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
